--- a/Code Busters/addnew.html
+++ b/Code Busters/addnew.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<title>Moro Gym</title>
 	<link rel="stylesheet" href="css/styles.css">
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	
 </head>
 <body>
 
@@ -38,7 +39,7 @@
 				<li><a href="addnew.html">Add New Member</a></li>
 				<li><a href="members.html">List of Members</a></li>
 				<li><a href="sales.html">Sales Report</a></li>
-				<li><a href="logout.html">Logout</a></li>
+				<li><a  onclick="logout()">Logout</a></li>
 			</ul>
 		</div>
 
@@ -124,6 +125,22 @@
 	}
 </script>
 
+<script>
+	function logout(){
+		var xhttp = new XMLHttpRequest();
+		var username = document.getElementById("username").value;
+		var password = document.getElementById("password").value;
+		xhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				console.log(this.response);
+				location.href = "index.html";
+			}
+		};
+		xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
+		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+		xhttp.send();
+	}
+</script>
 	
 </body>
 </html>
