--- a/Code Busters/members.html
+++ b/Code Busters/members.html
@@ -41,7 +41,7 @@
 				<li><a href="addnew.html">Add New Member</a></li>
 				<li><a href="members.html">List of Members</a></li>
 				<li><a href="sales.html">Sales Report</a></li>
-				<li><a href="logout.html">Logout</a></li>
+				<li><a  onclick="logout()">Logout</a></li>
 			</ul>
 		</div>
 
@@ -129,7 +129,7 @@
 	        <td>Mary</td>
 	        <td>Moe</td>
 	        <td>mary@example.com</td>
-			<td>john@example.com</td>
+					<td>john@example.com</td>
 	        <td>john@example.com</td>
 	        <td><button class="btn btn-info">View</button></td>
 	        <td><button class="btn btn-primary">Edit</button></td>
@@ -148,8 +148,24 @@
 	    </tbody>
 	  </table>
 	</div>
-
 </div>
+
+<script>
+	function logout(){
+		var xhttp = new XMLHttpRequest();
+		var username = document.getElementById("username").value;
+		var password = document.getElementById("password").value;
+		xhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				console.log(this.response);
+				location.href = "index.html";
+			}
+		};
+		xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
+		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+		xhttp.send();
+	}
+</script>
 	
 </body>
 </html>
