--- a/Code Busters/seelist.html
+++ b/Code Busters/seelist.html
@@ -41,7 +41,7 @@
 				<li><a href="addnew.html">Add New Member</a></li>
 				<li><a href="members.html">List of Members</a></li>
 				<li><a href="sales.html">Sales Report</a></li>
-				<li><a href="logout.html">Logout</a></li>
+				<li><a  onclick="logout()">Logout</a></li>
 			</ul>
 		</div>
 
@@ -94,4 +94,20 @@
 </div>
 	
 </body>
+<script>
+	function logout(){
+		var xhttp = new XMLHttpRequest();
+		var username = document.getElementById("username").value;
+		var password = document.getElementById("password").value;
+		xhttp.onreadystatechange = function() {
+			if (this.readyState == 4 && this.status == 200) {
+				console.log(this.response);
+				location.href = "index.html";
+			}
+		};
+		xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
+		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+		xhttp.send();
+	}
+</script>
 </html>
