--- a/Code Busters/index.html
+++ b/Code Busters/index.html
@@ -12,23 +12,17 @@
 		crossorigin="anonymous">
 	</script>
 	<script>
-		function checkIfLoggedIn(){
-			var xhttp = new XMLHttpRequest();
-  		xhttp.onreadystatechange = function() {
-				if (this.readyState == 4 && this.status == 200) {
-					alert(this.response.username)
-					if (typeof this.response.username == "undefined"){
-						alert("Not Logged In");
-					} else {
-						location.href = "home.html";
-					}
-				}
-  		};
-			xhttp.open("GET", "http://moro-system.herokuapp.com/admins/login/current", true);
-			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			xhttp.send();
-		}
-		checkIfLoggedIn();
+		// function checkIfLoggedIn(){
+		// 	var xhttp = new XMLHttpRequest();
+  	// 	xhttp.onreadystatechange = function() {
+		// 		if (this.readyState == 4 && this.status == 200) {
+		// 			location.href = "home.html";
+		// 		}
+  	// 	};
+		// 	xhttp.open("GET", "http://moro-system.herokuapp.com/admins/login/current", true);
+		// 	xhttp.send();
+		// }
+		// checkIfLoggedIn();
 	</script>
 </head>
 <body>
