--- a/Code Busters/visithistory.html
+++ b/Code Busters/visithistory.html
@@ -13,7 +13,6 @@
 	 crossorigin="anonymous">
 	</script>
 </head>
-
 <body>
 	<div id="container">
 		<div class="primary-navigation">
@@ -56,14 +55,13 @@
 			<a href="home.html" class="back">
 				< Back </a>
 					<p class="date">November 20, 2017</p>
-					<h2 class="page-title">List of Clients Today</h2>
+					<h2 class="page-title">Member's Visit History</h2>
 					<table class="table">
 						<thead>
 							<tr>
-								<th>ID Number</th>
+								<th>Last Day of Visit</th>
 								<th>Time-in</th>
 								<th>Time-out</th>
-								<th></th>
 							</tr>
 						</thead>
 						<tbody>
