--- a/Code Busters/members.html
+++ b/Code Busters/members.html
@@ -1,174 +1,181 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<title>Moro Gym</title>
 	<link rel="stylesheet" href="css/styles.css">
-	 <meta name="viewport" content="width=device-width, initial-scale=1">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-	  <script scr="js/clock.js"></script>
-	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>	
-
-	  <script scr="js/clock.js"></script>
-		<script
-			src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-			integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
-			crossorigin="anonymous">
-		</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+	 crossorigin="anonymous">
+	<script scr="js/clock.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script scr="js/clock.js"></script>
+	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha256-3edrmyuQ0w65f8gfBsqowzjJe2iM6n0nKciPUp8y+7E="
+	 crossorigin="anonymous">
+	</script>
 </head>
 <body>
-
-<div id="container">
-	
-	<div class="primary-navigation">
-		<div class="header-nav">
-			<div class="header-nav-img">
-				
+	<div id="container">
+		<div class="primary-navigation">
+			<div class="header-nav">
+				<div class="header-nav-img">
+				</div>
+				<div class="header-nav-title">
+					<p class="header-title-text">
+						Moro
+					</p>
+					<p class="header-title-text">
+						Lorenzo
+					</p>
+					<p class="header-title-text">
+						Gym
+					</p>
+				</div>
 			</div>
-			<div class="header-nav-title">
-				<p class="header-title-text">
-					Moro
-				</p>
-				<p class="header-title-text">
-					Lorenzo
-				</p>
-				<p class="header-title-text">
-					Gym
-				</p>
+			<div class="nav-buttons">
+				<ul>
+					<li>
+						<a href="home.html">Home</a>
+					</li>
+					<li>
+						<a href="addnew.html">Add New Member</a>
+					</li>
+					<li>
+						<a href="members.html">List of Members</a>
+					</li>
+					<li>
+						<a href="sales.html">Sales Report</a>
+					</li>
+					<li>
+						<a onclick="logout()">Logout</a>
+					</li>
+				</ul>
 			</div>
-			
 		</div>
-		<div class="nav-buttons">
-			<ul>
-				<li><a href="home.html">Home</a></li>
-				<li><a href="addnew.html">Add New Member</a></li>
-				<li><a href="members.html">List of Members</a></li>
-				<li><a href="sales.html">Sales Report</a></li>
-				<li><a  onclick="logout()">Logout</a></li>
-			</ul>
+		<div class="page-content">
+			<p id="demo"></p>
+			<script>
+				var d = new Date();
+				document.getElementById("demo").innerHTML = d;
+			</script>
+			<input type="text" placeholder="Search..">
+			<div class="members-header">
+				<div class="member-title">
+					<h2> List of Members </h2>
+				</div>
+				<div class="members-buttons">
+					<a href="">
+						<img src="photos/email.png" alt="" height="50" width="50">
+					</a>
+					<button>
+						<a href="	">DELETE ALL INACTIVE</a>
+					</button>
+					<img src="	" alt="">
+					<button class="black-solid-btn">
+						<a href="	">Printer Version</a>
+					</button>
+					<div class="btn-group">
+						<button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							Filter by
+						</button>
+						<div class="dropdown-menu">
+							<a class="dropdown-item" href="#">Active</a>
+							<a class="dropdown-item" href="#">Inactive</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Expired</a>
+							<a class="dropdown-item" href="#">Warning</a>
+							<a class="dropdown-item" href="#">Up-to-date</a>
+							<div class="dropdown-divider"></div>
+							<a class="dropdown-item" href="#">Processed</a>
+							<a class="dropdown-item" href="#">Not Processed</a>
+							<a class="dropdown-item" href="#">Pending</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th>ID Number</th>
+						<th>Client Name</th>
+						<th>Status</th>
+						<th>Card Status </th>
+						<th>Activity</th>
+						<th>View</th>
+						<th>Edit</th>
+						<th>Delete</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr>
+						<td>John</td>
+						<td>Doe</td>
+						<td>john@example.com</td>
+						<td>john@example.com</td>
+						<td>john@example.com</td>
+						<td>
+							<button class="btn btn-info">View</button>
+						</td>
+						<td>
+							<button class="btn btn-primary">Edit</button>
+						</td>
+						<td>
+							<button class="btn btn-danger">Delete</button>
+						</td>
+					</tr>
+					<tr>
+						<td>Mary</td>
+						<td>Moe</td>
+						<td>mary@example.com</td>
+						<td>john@example.com</td>
+						<td>john@example.com</td>
+						<td>
+							<button class="btn btn-info">View</button>
+						</td>
+						<td>
+							<button class="btn btn-primary">Edit</button>
+						</td>
+						<td>
+							<button class="btn btn-danger">Delete</button>
+						</td>
+					</tr>
+					<tr>
+						<td>July</td>
+						<td>Dooley</td>
+						<td>july@example.com</td>
+						<td>john@example.com</td>
+						<td>john@example.com</td>
+						<td>
+							<button class="btn btn-info"> View</button>
+						</td>
+						<td>
+							<button class="btn btn-primary">Edit</button>
+						</td>
+						<td>
+							<button class="btn btn-danger">Delete</button>
+						</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
-
 	</div>
+	<script>
+		function logout() {
+			var xhttp = new XMLHttpRequest();
+			xhttp.onreadystatechange = function () {
+				if (this.readyState == 4 && this.status == 200) {
 
-	<div class="page-content">
-
-		<p id="demo"></p>
-
-		<script>
-		var d = new Date();
-		document.getElementById("demo").innerHTML = d;
-		</script>
-		
-		<input type="text" placeholder="Search..">
-
-		<div class="members-header">	
-
-		<div class="member-title">	
-				<h2 >	List of Members </h2>
-		</div>
-
-
-
-		<div class="members-buttons">	
-
-		<a href=""><img src="	"></a>
-
-		<button><a href="	">DELETE ALL INACTIVE</a></button>
-		<img src="	" alt="">
-		<button class="black-solid-btn"><a href="	">Printer Version</a></button>
-
-		<div class="btn-group">
-		  <button type="button" class="btn btn-danger dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-		    Filter by
-		  </button>
-
-		  <div class="dropdown-menu">
-		    <a class="dropdown-item" href="#">Active</a>
-		    <a class="dropdown-item" href="#">Inactive</a>
-		    <div class="dropdown-divider"></div>
-		    <a class="dropdown-item" href="#">Expired</a>
-		    <a class="dropdown-item" href="#">Warning</a>	
-		    <a class="dropdown-item" href="#">Up-to-date</a>
-		    <div class="dropdown-divider"></div>		
-		    <a class="dropdown-item" href="#">Processed</a>
-		    <a class="dropdown-item" href="#">Not Processed</a>	
-		    <a class="dropdown-item" href="#">Pending</a>  	    
-		  </div>
-		</div>		
-
-		</div>
-
-
-		</div>
-
-		
-
-
-		<table class="table table-striped">
-	    <thead>
-	      <tr>
-	        <th>ID Number</th>
-	        <th>Client Name</th>
-	        <th>Status</th>
-	        <th>Card Status	</th>
-	        <th>Activity</th>
-	        <th>View</th>
-	        <th>Edit</th>
-	        <th>Delete</th>
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr>
-	        <td>John</td>
-	        <td>Doe</td>
-	        <td>john@example.com</td>
-	        <td>john@example.com</td>
-	        <td>john@example.com</td>
-	        <td><button class="btn btn-info">View</button></td>
-	        <td><button class="btn btn-primary">Edit</button></td>
-	        <td><button class="btn btn-danger">Delete</button></td>	        
-	      </tr>
-	      <tr>
-	        <td>Mary</td>
-	        <td>Moe</td>
-	        <td>mary@example.com</td>
-					<td>john@example.com</td>
-	        <td>john@example.com</td>
-	        <td><button class="btn btn-info">View</button></td>
-	        <td><button class="btn btn-primary">Edit</button></td>
-	        <td><button class="btn btn-danger">Delete</button></td>	   	        
-	      </tr>
-	      <tr>
-	        <td>July</td>
-	        <td>Dooley</td>
-	        <td>july@example.com</td>
-	        <td>john@example.com</td>
-	        <td>john@example.com</td>
-	        <td><button class="btn btn-info">View</button></td>
-	        <td><button class="btn btn-primary">Edit</button></td>
-	        <td><button class="btn btn-danger">Delete</button></td>	   	        
-	      </tr>
-	    </tbody>
-	  </table>
-	</div>
-</div>
-
-<script>
-	function logout(){
-		var xhttp = new XMLHttpRequest();
-		xhttp.onreadystatechange = function() {
-			if (this.readyState == 4 && this.status == 200) {
-				
-				location.href = "index.html";
-			}
-		};
-		xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
-		xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-		xhttp.send();
-	}
-</script>
-	
+					location.href = "index.html";
+				}
+			};
+			xhttp.open("POST", "http://moro-system.herokuapp.com/admins/logout", true);
+			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+			xhttp.send();
+		}
+	</script>
 </body>
+
 </html>
