--- a/Code Busters/viewmember.html
+++ b/Code Busters/viewmember.html
@@ -15,6 +15,7 @@
 	 crossorigin="anonymous">
 	</script>
 </head>
+
 <body>
 	<div id="container">
 		<div class="popup">
@@ -62,8 +63,11 @@
 			<div class="add-new-box">
 				<div class="add-photo">
 					<a href="" data-toggle="modal" data-target="#exampleModalCenter">
-						<img src="photos/addphot.png" alt="addphoto.png" height="100" width "100">
+						<img src="photos/addphot.png" alt="addphoto.png" height="100" width="100" style=" margin-bottom: 20px;">
 					</a>
+					<button class="yellow-ghost-btn">
+						<a href="visithistory.html">Visit History</a>
+					</button>
 				</div>
 				<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
 					<div class="modal-dialog modal-dialog-centered" role="document">
@@ -156,4 +160,5 @@
 		}
 	</script>
 </body>
+
 </html>
