--- a/Code Busters/addnew.html
+++ b/Code Busters/addnew.html
@@ -72,7 +72,7 @@
 			<div class="add-new-box">
 				<div class="add-photo">
 					<a href="" data-toggle="modal" data-target="#exampleModalCenter">
-						<img src="photos/addphot.png" alt="addphoto.png" >
+						<img src="photos/addphot.png" alt="addphoto.png">
 						<p>click to add photo</p>
 					</a>
 				</div>
@@ -90,7 +90,7 @@
 							</div>
 							<div class="modal-footer">
 								<button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-								<button type="button" class="btn btn-primary">Yes</button>
+								<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="getPhotoUrl()">Yes</button>
 							</div>
 						</div>
 					</div>
@@ -105,14 +105,19 @@
 					<input type="text" placeholder="Current Address" id="address">
 					<label for="">Sex</label>
 					<label class="radio-inline">
-						<input type="radio" name="optradio" id="male">Male
+						<input type="radio" name="optradio" id="male" value="male">Male
 					</label>
 					<label class="radio-inline">
-						<input type="radio" name="optradio" id="female">Female
+						<input type="radio" name="optradio" id="female" value="female">Female
 					</label>
 					<br/>
 					<input type="text" placeholder="Email Address" id="email">
 					<input type="text" placeholder="Birthday MM/DD/YYYY" id="birthday">
+					<input type="text" placeholder="Work phone" id="work_phone">
+					<br/>
+					<input type="text" placeholder="Landline" id="landline">
+					<input type="text" placeholder="Mobile Number" id="mobilenum">
+					<input type="text" placeholder="Emergency Contact" id="emercontact">
 					<br/>
 					<select class="empty" id="package">
 						<option value="" selected disabled>Package Enrolled</option>
@@ -120,13 +125,9 @@
 						<option value="semi-annual">Semi-annual</option>
 						<option value="monthly">Monthly</option>
 					</select>
-<<<<<<< HEAD
-=======
-					
->>>>>>> 104c2fac3863c162d630101e4ce279772c9f4929
 					<input type="date" id="myDate">
 					<label for="">to</label>
-					<input type="date" id="datepicker ">
+					<input type="date" id="datepicker">
 					<br/>
 					<input type="text" placeholder="Any medical problems" id="med-input">
 					<select class="empty" id="cardstatus">
@@ -143,8 +144,25 @@
 	<script>
 		function addMember() {
 			var xhttp = new XMLHttpRequest();
-			var username = document.getElementById("username").value;
-			var password = document.getElementById("password").value;
+			var image = x;
+			var idnum = document.getElementById("idnum").value;
+			var first_name = document.getElementById("firstname").value;
+			var last_name = document.getElementById("lastname").value;
+			var middle_initial = document.getElementById("mi").value;
+			var address = document.getElementById("address").value;
+			var sex = document.querySelector('input[name="optradio"]:checked').value;
+			var email = document.getElementById("email").value;
+			var birthday = document.getElementById("birthday").value;
+			var work_phone = document.getElementById("work_phone").value;
+			var landline = document.getElementById("landline").value;
+			var mobile_number = document.getElementById("mobilenum").value;
+			var emergency_contact_number = document.getElementById("emercontact").value;
+			var package_availed = document.getElementById("package").value;
+			var contract_begin = document.getElementById("myDate").value;
+			var contract_end = document.getElementById("datepicker").value;
+			var medical_condition = document.getElementById("med-input").value;
+			var membership_card_status = document.getElementById("cardstatus").value;
+
 			xhttp.onreadystatechange = function () {
 				if (this.readyState == 4 && this.status == 200) {
 					console.log(this.response);
@@ -152,9 +170,15 @@
 					popup.classList.toggle("show");
 				}
 			};;
-			xhttp.open("POST", "http://moro-system.herokuapp.com/admins/login", true);
+			xhttp.open("POST", "http://moro-system.herokuapp.com/members", true);
 			xhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-			xhttp.send("username=" + username + "&password=" + password);
+			xhttp.send("photo="+image+"&idnum="+idnum +"&firstname="+first_name+"&lastname="+last_name+"&mi="+middle_initial+"&address="+address+"&sex="+sex +"&email="+email+"&birthday="+birthday+"&landline="+landline+"&mobilenum="+mobile_number+"&emercontact="+emergency_contact_number+"&package="+package_availed+"&startdate="+contract_begin+"&enddate="+contract_end+"&medinput="+medical_condition+"&cardstatus="+membership_card_status);
+		}
+	</script>
+	<script>
+		var x = "";
+		function getPhotoUrl() {
+			x = document.getElementById("photofile").value;
 		}
 	</script>
 	<script>
